src/styles/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	/* 04B_03 - Pixel Font --- maybe later */
	/* @font-face {
		font-family: 'Pixel';
		src: local('Pixel'), url('/fonts/04B_03.ttf');
		font-weight: normal;
		font-display: swap;
	} */

  @font-face {
		font-family: 'Poppins';
		src: local('Poppins'), url('/fonts/Poppins-Bold.ttf');
		font-weight: bold;
		font-display: swap;
	}

  @font-face {
		font-family: 'Poppins';
		src: local('Poppins'), url('/fonts/Poppins-Medium.ttf');
		font-weight: medium;
		font-display: swap;
	}

  @font-face {
		font-family: 'Poppins';
		src: local('Poppins'), url('/fonts/Poppins-Light.ttf');
		font-weight: 300;
		font-display: swap;
	}

	h1,
	h2,
	h3,
	h4,
	h5,
	h6 {
		@apply font-black;
	}

	h1 {
		@apply text-6xl;
	}

	h1.main-heading {
		letter-spacing: -0.3vw;
		font-size: calc(1rem + 8vw);
		line-height: 0.9;
	}

	@screen xl {
		h1.main-heading {
			font-size: 120px;
		}
	}

	.hero h1.emoji {
		letter-spacing: -0.3vw;
		font-size: calc(1rem + 4vw);
	}

	@screen md {
		.hero h1 {
			@apply text-8xl;
		}
	}

	h2 {
		@apply text-4xl;
	}

	h2.rotated {
		@apply font-thin text-rose -rotate-3 -translate-x-0 sm:-translate-x-4 md:-translate-x-8 whitespace-nowrap;
	}

	h3 {
		@apply text-2xl;
	}

	em {
		@apply not-italic text-pink;
	}

	.keyword {
		@apply text-malachite;
	}

	.emphasis {
		@apply font-medium text-malachite dark:text-greenyellow;
	}

	/**
	 * Buttons
	 */
	.button,
	button {
		@apply rounded-md p-2 whitespace-nowrap;
		@apply flex items-center justify-between;
	}

	.button svg {
		@apply ml-3 h-4 w-4;
	}

	.button:focus,
	button:focus {
		@apply outline-none ring-2 ring-offset-2 ring-offset-black ring-black dark:ring-white;
	}

	.nav-button[aria-current] {
		@apply text-orange dark:text-yellow bg-lightgray dark:bg-gray;
		@apply underline underline-offset-8 sm:no-underline;
		@apply transition-colors duration-700;
		animation: colorChange 20s linear alternate infinite;
	}

	@screen md {
		.nav-button[aria-current] {
			@apply animate-none;
		}
	}

	a.tag-button {
		@apply text-black dark:text-white bg-lightgray dark:bg-gray;
		@apply no-underline font-normal;
	}

	/**
	 * Links
	 */
	button:focus,
	a:focus,
	.prose a:focus {
		@apply outline-none ring-1 ring-offset-2 ring-offset-black ring-black dark:ring-white no-underline;
	}

	/**
	 * Theme toggle - pure css -> on flicker
	 */
	.light-button {
		@apply hidden;
	}

	.dark .dark-button {
		@apply hidden;
	}

	.dark .light-button {
		@apply block;
	}

	.background-shape {
		@apply bg-lightgray dark:bg-gray transition-colors duration-700;
	}

	*::selection {
		@apply bg-iceberg text-black;
	}
	/**
	 * Tags
	**/

	.tag.button {
		@apply text-xs rounded-md;
		@apply py-2 px-3 mr-3 mb-3;
		@apply flex grow-0 items-center;
		@apply scale-100 select-none cursor-pointer;
		@apply bg-lightgray dark:bg-gray;
	}

	.tag.button svg {
		@apply w-6 h-6;
	}

	.tag.button img {
		@apply w-8;
	}

	.tag.button span {
		@apply mx-2;
	}
}

